--- a/package.json
+++ b/package.json
@@ -12,10 +12,8 @@
 		"babel-cli": "^6.26.0",
 		"babel-core": "^6.25.0",
 		"babel-loader": "^7.1.1",
-		"babel-plugin-react-transform": "^3.0.0",
 		"babel-preset-env": "^1.5.1",
 		"babel-preset-react": "^6.24.1",
-		"babel-preset-react-hmre": "^1.1.1",
 		"babel-preset-stage-0": "^6.24.1",
 		"css-loader": "^0.28.11",
 		"file-loader": "^1.1.11",
@@ -23,6 +21,7 @@
 		"image-webpack-loader": "^4.3.1",
 		"node-sass": "^4.9.0",
 		"postcss-loader": "^2.1.5",
+		"react-hot-loader": "^4.3.1",
 		"sass-loader": "^7.0.3",
 		"style-loader": "^0.21.0",
 		"url-loader": "^1.0.1",
