--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
 		"node-sass": "^4.9.0",
 		"postcss-loader": "^2.1.5",
 		"react-hot-loader": "^4.3.1",
+		"react-router": "^4.3.1",
+		"react-router-dom": "^4.3.1",
 		"sass-loader": "^7.0.3",
 		"style-loader": "^0.21.0",
 		"url-loader": "^1.0.1",
